<resources>

    <string name="app_name">QuestNYC</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="sign_in_welcome">Welcome To QuestNYC!</string>
    <string name="help">Help</string>
    <string name="signIn">Sign In</string>
    <string name="help1">To get started, please log in using your email address. If you have not done so, please provide one so an account can be made for you. Once you are logged in, your location will be recorded and you will be presented a list of quests in your area.</string>
    <string name="help2">Once you are logged in, your location will be determined and you will be presented a list of quests in your area.</string>
    <string name="help3">Solving these quests will require a keen eye and a sharp mind. Are you up to the challenge?</string>
    <string name="help4">That\'s all there is to it! Have fun questing! (press back button to exit)</string>
    <string name="rating">"What did you think of this quest?</string>
    <string name="regular_key">0sh0i4XC5lcHE4m5wt_o0gBPur4_GO5vU595X2g</string>
    <string name="debug_key">0sh0i4XC5lcF0n82pEXLAfYNQ4MYPk0O9mXHSmA</string>
    <string name="signUp">Sign Up</string>
    <string name="goBack">Return</string>
    <string name="nickname">What\'s your name?</string>
    <string name="center">Center</string>
    <string name="boundary">Boundary</string>
    <string name="placemarkers">Create a perimeter above. Pick a center point, and then pick four points around it.</string>
    <string name="place">Place</string>
    <string name="startover">Start Over</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_question">Delete this quest?</string>
    <string name="deletequest">Delete Quest</string>
    <string name="playquest">Play Quest</string>
    <string name="createquest">Create Quest</string>
    <string name="name_quest">Name This Quest</string>
    <string name="describe_quest">Describe This Quest</string>

</resources>