<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:context=".MainMenuActivity" />

    <EditText
        android:id="@+id/questNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
		android:inputType="textPersonName">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/nicknameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/name_quest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/nameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/goBack" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questNameField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/describe_quest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/questDescriptionField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nameButton"
        android:layout_alignLeft="@+id/questNameField"
        android:layout_marginBottom="25dp"
        android:inputType="textPersonName"
        android:ems="10" />

</RelativeLayout>
